--- a/NoteSharingCenter.Sample/Views/Home/Index.cshtml
+++ b/NoteSharingCenter.Sample/Views/Home/Index.cshtml
@@ -12,14 +12,43 @@
     </div>
 </div>
 
-<div class="body">
+<div >
 
     <div role="main" class="main">
 
         <div class="sort-destination-loader sort-destination-loader-showing recent-posts bg-dark m-0 p-0">
             <div class="row portfolio-list sort-destination m-0 p-0" data-sort-id="portfolio">
 
-                <div class="col-sm-6 col-lg-3 p-0 m-0 isotope-item text-left">
+                <div class="col-sm-6 col-lg-4 p-0 m-0 isotope-item text-left">
+                    <a href="blog-post.html">
+                        <article>
+                            <div class="thumb-info thumb-info-no-borders thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
+                                <div class="thumb-info-wrapper thumb-info-wrapper-opacity-6">
+                                    <img src="~/img/blog-46.jpg" class="img-fluid" alt="How To Take Better Concert Pictures in 30 Seconds">
+                                    <div class="date p-absolute z-index-2 top-10 right-10 mr-0 ml-2 pl-1 pt-1">
+                                        <div class="day bg-color-light font-weight-extra-bold py-2 text-color-dark">12</div>
+                                        <div class="month text-1 bg-color-light line-height-9 text-default w-100 top-2 d-block py-0"><div class="text-1">Jan</div></div>
+                                        <div class="day bg-color-light font-weight-extra-bold py-2 text-color-dark">12</div>
+                                        <div class="month text-1 bg-color-light line-height-9 text-default w-100 top-2 d-block py-0"><div class="text-1"><i class="fas fa-star"></i></div></div>
+                                    </div>
+                                   
+                                    <div class="thumb-info-title bg-transparent p-4">
+                                        <div class="thumb-info-type bg-color-primary px-2 mb-1" style="color:white;">Photography</div>
+                                        <div class="thumb-info-inner mt-1">
+                                            <h2 class="text-color-light line-height-2 text-4 font-weight-bold mb-0">How To Take Better Concert Pictures in 30 Seconds</h2>
+                                        </div>
+                                        <div class="thumb-info-show-more-content">
+                                            <p class="mb-0 text-1 line-height-9 mb-1 mt-2 text-light opacity-5 d-none d-lg-block">Euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                                            <a href="#">content</a>
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-lg-4 p-0 m-0 isotope-item text-left">
                     <a href="blog-post.html">
                         <article>
                             <div class="thumb-info thumb-info-no-borders thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
@@ -43,151 +72,7 @@
                         </article>
                     </a>
                 </div>
-                <div class="col-sm-6 col-lg-3 p-0 m-0 isotope-item text-left">
-                    <a href="blog-post.html">
-                        <article>
-                            <div class="thumb-info thumb-info-no-borders thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
-                                <div class="thumb-info-wrapper thumb-info-wrapper-opacity-6">
-                                    <img src="~/img/blog-46.jpg" class="img-fluid" alt="How To Take Better Concert Pictures in 30 Seconds">
-                                    <div class="date p-absolute z-index-2 top-10 right-10 mr-0 ml-2 pl-1 pt-1">
-                                        <div class="day bg-color-light font-weight-extra-bold py-2 text-color-dark">12</div>
-                                        <div class="month text-1 bg-color-light line-height-9 text-default w-100 top-2 d-block py-0"><div class="text-1">Jan</div></div>
-                                    </div>
-                                    <div class="thumb-info-title bg-transparent p-4">
-                                        <div class="thumb-info-type bg-color-primary px-2 mb-1">Photography</div>
-                                        <div class="thumb-info-inner mt-1">
-                                            <h2 class="text-color-light line-height-2 text-4 font-weight-bold mb-0">How To Take Better Concert Pictures in 30 Seconds</h2>
-                                        </div>
-                                        <div class="thumb-info-show-more-content">
-                                            <p class="mb-0 text-1 line-height-9 mb-1 mt-2 text-light opacity-5 d-none d-lg-block">Euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-3 p-0 m-0 isotope-item text-left">
-                    <a href="blog-post.html">
-                        <article>
-                            <div class="thumb-info thumb-info-no-borders thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
-                                <div class="thumb-info-wrapper thumb-info-wrapper-opacity-6">
-                                    <img src="~/img/blog-46.jpg" class="img-fluid" alt="How To Take Better Concert Pictures in 30 Seconds">
-                                    <div class="date p-absolute z-index-2 top-10 right-10 mr-0 ml-2 pl-1 pt-1">
-                                        <div class="day bg-color-light font-weight-extra-bold py-2 text-color-dark">12</div>
-                                        <div class="month text-1 bg-color-light line-height-9 text-default w-100 top-2 d-block py-0"><div class="text-1">Jan</div></div>
-                                    </div>
-                                    <div class="thumb-info-title bg-transparent p-4">
-                                        <div class="thumb-info-type bg-color-primary px-2 mb-1">Photography</div>
-                                        <div class="thumb-info-inner mt-1">
-                                            <h2 class="text-color-light line-height-2 text-4 font-weight-bold mb-0">How To Take Better Concert Pictures in 30 Seconds</h2>
-                                        </div>
-                                        <div class="thumb-info-show-more-content">
-                                            <p class="mb-0 text-1 line-height-9 mb-1 mt-2 text-light opacity-5 d-none d-lg-block">Euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-3 p-0 m-0 isotope-item text-left">
-                    <a href="blog-post.html">
-                        <article>
-                            <div class="thumb-info thumb-info-no-borders thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
-                                <div class="thumb-info-wrapper thumb-info-wrapper-opacity-6">
-                                    <img src="~/img/blog-46.jpg" class="img-fluid" alt="How To Take Better Concert Pictures in 30 Seconds">
-                                    <div class="date p-absolute z-index-2 top-10 right-10 mr-0 ml-2 pl-1 pt-1">
-                                        <div class="day bg-color-light font-weight-extra-bold py-2 text-color-dark">12</div>
-                                        <div class="month text-1 bg-color-light line-height-9 text-default w-100 top-2 d-block py-0"><div class="text-1">Jan</div></div>
-                                    </div>
-                                    <div class="thumb-info-title bg-transparent p-4">
-                                        <div class="thumb-info-type bg-color-primary px-2 mb-1">Photography</div>
-                                        <div class="thumb-info-inner mt-1">
-                                            <h2 class="text-color-light line-height-2 text-4 font-weight-bold mb-0">How To Take Better Concert Pictures in 30 Seconds</h2>
-                                        </div>
-                                        <div class="thumb-info-show-more-content">
-                                            <p class="mb-0 text-1 line-height-9 mb-1 mt-2 text-light opacity-5 d-none d-lg-block">Euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-3 p-0 m-0 isotope-item text-left">
-                    <a href="blog-post.html">
-                        <article>
-                            <div class="thumb-info thumb-info-no-borders thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
-                                <div class="thumb-info-wrapper thumb-info-wrapper-opacity-6">
-                                    <img src="~/img/blog-46.jpg" class="img-fluid" alt="How To Take Better Concert Pictures in 30 Seconds">
-                                    <div class="date p-absolute z-index-2 top-10 right-10 mr-0 ml-2 pl-1 pt-1">
-                                        <div class="day bg-color-light font-weight-extra-bold py-2 text-color-dark">12</div>
-                                        <div class="month text-1 bg-color-light line-height-9 text-default w-100 top-2 d-block py-0"><div class="text-1">Jan</div></div>
-                                    </div>
-                                    <div class="thumb-info-title bg-transparent p-4">
-                                        <div class="thumb-info-type bg-color-primary px-2 mb-1">Photography</div>
-                                        <div class="thumb-info-inner mt-1">
-                                            <h2 class="text-color-light line-height-2 text-4 font-weight-bold mb-0">How To Take Better Concert Pictures in 30 Seconds</h2>
-                                        </div>
-                                        <div class="thumb-info-show-more-content">
-                                            <p class="mb-0 text-1 line-height-9 mb-1 mt-2 text-light opacity-5 d-none d-lg-block">Euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-3 p-0 m-0 isotope-item text-left">
-                    <a href="blog-post.html">
-                        <article>
-                            <div class="thumb-info thumb-info-no-borders thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
-                                <div class="thumb-info-wrapper thumb-info-wrapper-opacity-6">
-                                    <img src="~/img/blog-46.jpg" class="img-fluid" alt="How To Take Better Concert Pictures in 30 Seconds">
-                                    <div class="date p-absolute z-index-2 top-10 right-10 mr-0 ml-2 pl-1 pt-1">
-                                        <div class="day bg-color-light font-weight-extra-bold py-2 text-color-dark">12</div>
-                                        <div class="month text-1 bg-color-light line-height-9 text-default w-100 top-2 d-block py-0"><div class="text-1">Jan</div></div>
-                                    </div>
-                                    <div class="thumb-info-title bg-transparent p-4">
-                                        <div class="thumb-info-type bg-color-primary px-2 mb-1">Photography</div>
-                                        <div class="thumb-info-inner mt-1">
-                                            <h2 class="text-color-light line-height-2 text-4 font-weight-bold mb-0">How To Take Better Concert Pictures in 30 Seconds</h2>
-                                        </div>
-                                        <div class="thumb-info-show-more-content">
-                                            <p class="mb-0 text-1 line-height-9 mb-1 mt-2 text-light opacity-5 d-none d-lg-block">Euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-3 p-0 m-0 isotope-item text-left">
-                    <a href="blog-post.html">
-                        <article>
-                            <div class="thumb-info thumb-info-no-borders thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
-                                <div class="thumb-info-wrapper thumb-info-wrapper-opacity-6">
-                                    <img src="~/img/blog-46.jpg" class="img-fluid" alt="How To Take Better Concert Pictures in 30 Seconds">
-                                    <div class="date p-absolute z-index-2 top-10 right-10 mr-0 ml-2 pl-1 pt-1">
-                                        <div class="day bg-color-light font-weight-extra-bold py-2 text-color-dark">12</div>
-                                        <div class="month text-1 bg-color-light line-height-9 text-default w-100 top-2 d-block py-0"><div class="text-1">Jan</div></div>
-                                    </div>
-                                    <div class="thumb-info-title bg-transparent p-4">
-                                        <div class="thumb-info-type bg-color-primary px-2 mb-1">Photography</div>
-                                        <div class="thumb-info-inner mt-1">
-                                            <h2 class="text-color-light line-height-2 text-4 font-weight-bold mb-0">How To Take Better Concert Pictures in 30 Seconds</h2>
-                                        </div>
-                                        <div class="thumb-info-show-more-content">
-                                            <p class="mb-0 text-1 line-height-9 mb-1 mt-2 text-light opacity-5 d-none d-lg-block">Euismod atras vulputate iltricies etri elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-3 p-0 m-0 isotope-item text-left">
+                <div class="col-sm-6 col-lg-4 p-0 m-0 isotope-item text-left">
                     <a href="blog-post.html">
                         <article>
                             <div class="thumb-info thumb-info-no-borders thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
