--- a/NoteSharingCenter.Sample/Views/Shared/Error.cshtml
+++ b/NoteSharingCenter.Sample/Views/Shared/Error.cshtml
@@ -1,5 +1,11 @@
-﻿@using NoteSharingCenter.Entity.Messages
-@model List<ErrorMessageObj>
+﻿@using NoteSharingCenter.Sample.Models
+@using NoteSharingCenter.Entity.Messages
+@model ErrorViewModel
+
+@{
+    Layout = null;
+}
+
 <!doctype html>
 <html class="fixed">
 <head>
@@ -39,12 +45,12 @@
     <section class="body-sign">
         <div class="center-sign">
             <div class="col-md-12">
-                <h2 class="title text-uppercase font-weight-bold m-0 text-center mb-3"><i class="fas fa-spinner fa-pulse"></i> Redirecting... <span id="kalan"></span></h2>
+                <h2 class="title text-uppercase font-weight-bold m-0 text-center mb-3"><i class="fas fa-spinner fa-pulse"></i> @Model.Header <span id="timer"></span></h2>
             </div>
             <div class="col-md-12 text-center">
-                <p class="h5"><i class="far fa-thumbs-down" style="color:steelblue;"></i> Account not valid</p>
+                <p class="h5"><i class="fas fa-times" style="color:red;"></i> @Model.Title</p>
                 <p>
-                    @foreach (ErrorMessageObj item in Model)
+                    @foreach (ErrorMessageObj item in Model.Items)
                     {
                         @item.Message <br />
                     }
@@ -75,19 +81,27 @@
     <!-- Theme Initialization Files -->
     <script src="~/Content/Admin/js/theme.init.js"></script>
 
-
+    @{
+        string wl = string.Empty;
+        int time = 0;
+        if (Model.IsRedirecting)
+        {
+            wl = Model.RedirectinUrl;
+            time = Model.RedirectingTimeout;
+        }
+    }
     <script>
-        var sure = 10;
-        var saniye = document.getElementById("kalan").innerHTML = sure;
+        var time = @time;
+        var second = document.getElementById("timer").innerHTML = time;
 
         function final() {
-            if (saniye != 0) {
-                saniye -= 1;
-                document.getElementById("kalan").innerHTML = saniye;
+            if (second != 0) {
+                second -= 1;
+                document.getElementById("timer").innerHTML = second;
             }
 
             else {
-                window.location = "/Home/Index"
+                window.location = "@wl"
                 return;
             }
             setTimeout("final()", 1000);
